[tool.poetry]
name = "streamlit_test"
version = "0.1.0"
description = ""
authors = ["Jonas <jonas.schwenke@gutefrage.net>"]

[tool.poetry.dependencies]
python = "==3.7.6"
streamlit = "^1.3.1"
numpy = "==1.21.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
altair = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
